[VAS-729] feat: Introduced payment-notice API
